# log.hpp

./: CMakeLists.txt  LICENSE  README.md  example.cpp  log.hpp
